--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ js-sys = "0.3"
 serde = { version = "1", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 console_error_panic_hook = "0.1.7"
+console_log = "1.0.0"
+log = "0.4.22"
 
 [workspace]
 members = ["src-tauri"]
